[gd_scene load_steps=39 format=2]

[ext_resource path="res://TierTwoModules/first_person_controller/player_bt/LoadInputs.gd" type="Script" id=1]
[ext_resource path="res://Modules/audio_library/AudioLib3D.gd" type="Script" id=2]
[ext_resource path="res://Modules/behaviour_tree/nodes/composites/sequence.gd" type="Script" id=3]
[ext_resource path="res://Modules/behaviour_tree/nodes/bt_root.gd" type="Script" id=4]
[ext_resource path="res://TierTwoModules/first_person_controller/player_bt/Move.gd" type="Script" id=5]
[ext_resource path="res://Modules/interactables/InteractionDetector.tscn" type="PackedScene" id=6]
[ext_resource path="res://TierTwoModules/first_person_controller/player_bt/IsOccupied.gd" type="Script" id=7]
[ext_resource path="res://TierTwoModules/first_person_controller/player_bt/ItemInteractExternal.gd" type="Script" id=8]
[ext_resource path="res://TierTwoModules/first_person_controller/player_bt/LookCam.gd" type="Script" id=9]
[ext_resource path="res://TierTwoModules/first_person_controller/player_bt/HeldItemRotate.gd" type="Script" id=10]
[ext_resource path="res://TierTwoModules/first_person_controller/player_bt/LoadExports.gd" type="Script" id=11]
[ext_resource path="res://Modules/behaviour_tree/nodes/decorators/limiter.gd" type="Script" id=12]
[ext_resource path="res://Modules/behaviour_tree/nodes/decorators/succeeder.gd" type="Script" id=13]
[ext_resource path="res://TierTwoModules/first_person_controller/PlayerUseBT.gd" type="Script" id=14]
[ext_resource path="res://TierTwoModules/first_person_controller/player_bt/GrabMouse.gd" type="Script" id=15]
[ext_resource path="res://TierTwoModules/first_person_controller/InteractItemHeld.gd" type="Script" id=16]
[ext_resource path="res://TierTwoModules/first_person_controller/ToggleFlashlight.gd" type="Script" id=17]
[ext_resource path="res://Modules/behaviour_tree/nodes/composites/selector.gd" type="Script" id=18]
[ext_resource path="res://TierTwoModules/first_person_controller/UseCurrentItem.gd" type="Script" id=19]
[ext_resource path="res://addons/subtitles/scripts/ASP_3D_Events.gd" type="Script" id=20]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_grass_003.ogg" type="AudioStream" id=21]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_grass_002.ogg" type="AudioStream" id=22]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_grass_001.ogg" type="AudioStream" id=23]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_grass_004.ogg" type="AudioStream" id=24]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_grass_000.ogg" type="AudioStream" id=25]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_wood_004.ogg" type="AudioStream" id=26]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_wood_001.ogg" type="AudioStream" id=27]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_wood_003.ogg" type="AudioStream" id=28]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_wood_000.ogg" type="AudioStream" id=29]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_wood_002.ogg" type="AudioStream" id=30]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_concrete_000.ogg" type="AudioStream" id=31]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_concrete_003.ogg" type="AudioStream" id=32]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_concrete_002.ogg" type="AudioStream" id=33]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_concrete_001.ogg" type="AudioStream" id=34]
[ext_resource path="res://Resources/sfx/kenney_impacts/footstep_concrete_004.ogg" type="AudioStream" id=35]

[sub_resource type="CapsuleShape" id=1]
radius = 0.585846
height = 2.72128

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "walking_anim"
length = 2.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Camera:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 1, 1.25, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 1.90735e-06 ), Vector3( 0, 0, 1.5 ), Vector3( 0, 0, 2 ), Vector3( 0, 0, 1.90735e-06 ), Vector3( 0, 0, -1.5 ), Vector3( 0, 0, -2 ), Vector3( 0, 0, 1.90735e-06 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AudioLib3D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "footsteps_stone" ],
"method": "play"
}, {
"args": [ "footsteps_stone" ],
"method": "play"
} ]
}

[node name="FirstPersonCharacterBase" type="KinematicBody" groups=["persist", "player"]]
script = ExtResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.9602, -7.31945e-08 )
shape = SubResource( 1 )

[node name="CharacterModel" type="Spatial" parent="."]

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
current = true
far = 1000.0

[node name="InteractionDetector" parent="Pivot/Camera" instance=ExtResource( 6 )]

[node name="SpotLight" type="SpotLight" parent="Pivot/Camera"]
spot_range = 30.0
spot_angle = 30.0
spot_angle_attenuation = 0.287174

[node name="Dummy" type="Spatial" parent="Pivot/Camera"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.37114e-08, 0, 0.5 )

[node name="SpringArm" type="SpringArm" parent="Pivot/Camera"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
spring_length = 4.0

[node name="Spatial" type="Spatial" parent="Pivot/Camera/SpringArm"]

[node name="RemoteTransform" type="RemoteTransform" parent="Pivot/Camera/SpringArm/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
remote_path = NodePath("../../../Dummy")

[node name="PlayerBehaviourTree" type="Node" parent="."]
script = ExtResource( 4 )
actor_path = NodePath("..")

[node name="root" type="Node" parent="PlayerBehaviourTree"]
script = ExtResource( 3 )

[node name="AlwaysSucceedDecorator" type="Node" parent="PlayerBehaviourTree/root"]
script = ExtResource( 13 )

[node name="LimiterDecorator" type="Node" parent="PlayerBehaviourTree/root/AlwaysSucceedDecorator"]
script = ExtResource( 12 )
max_count = 1.0

[node name="SequenceComposite" type="Node" parent="PlayerBehaviourTree/root/AlwaysSucceedDecorator/LimiterDecorator"]
script = ExtResource( 3 )

[node name="LoadExports" type="Node" parent="PlayerBehaviourTree/root/AlwaysSucceedDecorator/LimiterDecorator/SequenceComposite"]
script = ExtResource( 11 )
camera_path = NodePath("../../../../../../Pivot/Camera")
camera_pivot_path = NodePath("../../../../../../Pivot")
selection_cast = NodePath("../../../../../../Pivot/Camera/InteractionDetector")
animation_player = NodePath("../../../../../../AnimationPlayer")

[node name="GrabMouse" type="Node" parent="PlayerBehaviourTree/root/AlwaysSucceedDecorator/LimiterDecorator/SequenceComposite"]
script = ExtResource( 15 )

[node name="IsOccupied" type="Node" parent="PlayerBehaviourTree/root"]
script = ExtResource( 7 )

[node name="NormalInteractions" type="Node" parent="PlayerBehaviourTree/root"]
script = ExtResource( 3 )

[node name="LoadInputs" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions"]
script = ExtResource( 1 )

[node name="Interaction Succeeder" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions"]
script = ExtResource( 13 )

[node name="InteractionSelector" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions/Interaction Succeeder"]
script = ExtResource( 18 )

[node name="InteractExternal" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions/Interaction Succeeder/InteractionSelector"]
script = ExtResource( 8 )

[node name="InteractHeld" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions/Interaction Succeeder/InteractionSelector"]
script = ExtResource( 16 )

[node name="Item Use Succeeder" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions"]
script = ExtResource( 13 )

[node name="UseCurrentItem" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions/Item Use Succeeder"]
script = ExtResource( 19 )

[node name="FlashlightSucceeder" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions"]
script = ExtResource( 13 )

[node name="ToggleFlashlight" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions/FlashlightSucceeder"]
script = ExtResource( 17 )
light_toggle_path = NodePath("../../../../../Pivot/Camera/SpotLight")
starting_state = false

[node name="SelectorComposite" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions"]
script = ExtResource( 18 )

[node name="HeldItemRotate" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions/SelectorComposite"]
script = ExtResource( 10 )

[node name="LookCam" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions/SelectorComposite"]
script = ExtResource( 9 )

[node name="Move" type="Node" parent="PlayerBehaviourTree/root/NormalInteractions"]
script = ExtResource( 5 )
walk_speed = 5.0
sprint_speed = 15.0
acceleration = 5.0
walking_anim_sprint_scalar = 6.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
playback_default_blend_time = 0.5
anims/RESET = SubResource( 3 )
anims/walking_anim = SubResource( 2 )

[node name="AudioLib3D" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="footsteps_grass" type="Spatial" parent="AudioLib3D"]
script = ExtResource( 2 )

[node name="footstep_grass" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_grass"]
stream = ExtResource( 25 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_grass_2" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_grass"]
stream = ExtResource( 23 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_grass_3" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_grass"]
stream = ExtResource( 22 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_grass_4" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_grass"]
stream = ExtResource( 21 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_grass_5" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_grass"]
stream = ExtResource( 24 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footsteps_stone" type="Spatial" parent="AudioLib3D"]
script = ExtResource( 2 )

[node name="footstep_stone" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_stone"]
stream = ExtResource( 31 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_stone_2" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_stone"]
stream = ExtResource( 34 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_stone_3" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_stone"]
stream = ExtResource( 33 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_stone_4" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_stone"]
stream = ExtResource( 32 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_stone_5" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_stone"]
stream = ExtResource( 35 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footsteps_wood" type="Spatial" parent="AudioLib3D"]
script = ExtResource( 2 )

[node name="footstep_wood" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_wood"]
stream = ExtResource( 29 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_wood_2" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_wood"]
stream = ExtResource( 27 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_wood_3" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_wood"]
stream = ExtResource( 30 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_wood_4" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_wood"]
stream = ExtResource( 28 )
bus = "SoundEffects"
script = ExtResource( 20 )

[node name="footstep_wood_5" type="AudioStreamPlayer3D" parent="AudioLib3D/footsteps_wood"]
stream = ExtResource( 26 )
bus = "SoundEffects"
script = ExtResource( 20 )
